feat: Introduce animated header component, global styles, Open Graph metadata, and a new image asset.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta property="og:title" content="Landing Page" />
-    <meta property="og:description" content="Mô tả landing page" />
+    <meta property="og:title" content="Tiến Toàn - Kim Ngân" />
+    <meta
+      property="og:description"
+      content="Thiệp mời cưới Tiến Toàn - Kim Ngân"
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://yourdomain.com" />
+    <meta property="og:url" content="https://toanngan.site" />
     <meta
       property="og:image"
       content="https://toanngan.site/thiep-moi-cuoi/HKG03830.webp"
