--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://toanngan.site" />
     <meta
       property="og:image"
-      content="https://toanngan.site/thiep-moi-cuoi/thump"
+      content="https://toanngan.site/thiep-moi-cuoi/thump.jpg"
     />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
