--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       property="og:image"
       content="https://toanngan.site/thiep-moi-cuoi/thump.jpg"
     />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/src/assets/love-letter2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
