--- a/index.html
+++ b/index.html
@@ -56,6 +56,20 @@
       href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap"
       rel="stylesheet"
     />
+
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-FVB0G3V784"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+      gtag("config", "G-FVB0G3V784");
+    </script>
+
     <title>TOÀN & NGÂN</title>
   </head>
 
