--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       gtag("config", "G-FVB0G3V784");
     </script>
 
-    <title>TOÀN & NGÂN</title>
+    <title>Toàn Ngân Wedding</title>
   </head>
 
   <body>
